# model/account.go
@@ -7,15 +7,17 @@ import (
 
 	"github.com/jinzhu/gorm"
 	uuid "github.com/satori/go.uuid"
-
 	"golang.org/x/crypto/bcrypt"
 )
 
 type Account struct {
-	Id       string    `json:"id" gorm:"column:id;primaryKey"`
-	Name     string    `json:"name" gorm:"column:name"`
-	Password string    `json:"password" gorm:"column:password"`
-	CreateOn time.Time `json:"password" gorm:"column:CreateOn"`
+	CreatedAt time.Time  `json:"-"`
+	UpdatedAt time.Time  `json:"-"`
+	DeletedAt *time.Time `json:"-"`
+
+	Id       string `json:"id" gorm:"primaryKey"`
+	Name     string `json:"name" gorm:"not null;unique"`
+	Password string `json:"password" gorm:"not null"`
 }
 
 func (Account) TableName() string {
@@ -35,7 +37,6 @@ func (a Account) Create(accountPayload form.AccountSignup) (*gorm.DB, error) {
 		Id:       id.String(),
 		Name:     accountPayload.Name,
 		Password: hashPwd,
-		CreateOn: time.Now(),
 	}
 
 	result := db.Create(&account)
@@ -43,6 +44,67 @@ func (a Account) Create(accountPayload form.AccountSignup) (*gorm.DB, error) {
 		return nil, err
 	}
 	return result, nil
+}
+
+func (a Account) Get(accountPayload form.AccountSignup) (*Account, error) {
+	db := postgres.GetDb()
+
+	account := Account{}
+	raw := `SELECT * FROM account where name = ?`
+	result := db.Raw(raw, accountPayload.Name).Scan(&account)
+	if err := result.Error; err != nil {
+		return nil, err
+	}
+
+	return &account, nil
+}
+
+func (a Account) GetFromId(id string) (*Account, error) {
+	db := postgres.GetDb()
+
+	account := Account{}
+	raw := `SELECT * FROM account where id = ?`
+	result := db.Raw(raw, id).Scan(&account)
+	if err := result.Error; err != nil {
+		return nil, err
+	}
+
+	return &account, nil
+}
+
+func (a Account) Delete(id string) error {
+	db := postgres.GetDb()
+
+	raw := `DELETE FROM account where id = ?`
+	result := db.Exec(raw, id)
+	if err := result.Error; err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (a Account) UpdatePasswd(id string, password string) (*gorm.DB, error) {
+	db := postgres.GetDb()
+
+	raw := `UPDATE account SET password = ? WHERE id = ?;`
+	result := db.Exec(raw, password, id)
+	if err := result.Error; err != nil {
+		return nil, err
+	}
+	return result, nil
+}
+
+func (a Account) GetAll() (*[]Account, error) {
+	db := postgres.GetDb()
+
+	var accounts []Account
+	result := db.Raw("select * from account").Scan(&accounts)
+	if err := result.Error; err != nil {
+		return nil, err
+	}
+
+	return &accounts, nil
 }
 
 func HashPassword(password string) (string, error) {
