# server/router.go
@@ -1,6 +1,8 @@
 package server
 
 import (
+	"github.com/gin-contrib/sessions"
+	"github.com/gin-contrib/sessions/cookie"
 	"net/http"
 	"studygroup/controller"
 	_ "studygroup/docs"
@@ -10,10 +12,15 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
+const KEY = "sessionkey"
+
 func NewRouter() *gin.Engine {
 	router := gin.New()
 	router.Use(gin.Logger())
 	router.Use(gin.Recovery())
+
+	store := cookie.NewStore([]byte(KEY))
+	router.Use(sessions.Sessions("studygroup", store))
 
 	router.GET("/", func(ctx *gin.Context) {
 		ctx.Redirect(http.StatusMovedPermanently, "/swagger/index.html")
@@ -24,14 +31,46 @@ func NewRouter() *gin.Engine {
 	{
 		helloWorldGroup := v1.Group("/hello-world")
 		{
-			helloWorldController := new(controller.HelloWroldController)
+			helloWorldController := new(controller.HelloWorldController)
 			helloWorldGroup.GET("/", helloWorldController.GetHelloWorld)
 		}
-		accountGroup := v1.Group("/account")
+		authGroup := v1.Group("/auth")
 		{
-			accountController := new(controller.AccountController)
-			accountGroup.POST("/", accountController.CreateAccount)
+			authController := new(controller.AuthController)
+			authGroup.POST("/login", authController.Login)
+			authGroup.GET("/logout", authController.Logout)
 		}
+		authedGroup := v1.Group("/authed")
+		{
+			accountGroup := authedGroup.Group("/account", AuthSessionMiddle())
+			{
+				accountController := new(controller.AccountController)
+				accountGroup.POST("/", accountController.CreateAccount)
+				accountGroup.GET("/", accountController.GetAccountInfo)
+				accountGroup.DELETE("/", accountController.DeleteAccount)
+				accountGroup.PUT("/resetpwd", accountController.ResetPassword)
+				accountGroup.GET("/all", accountController.GetAllAccounts)
+			}
+		}
+
 	}
 	return router
+}
+
+func AuthSessionMiddle() gin.HandlerFunc {
+	return func(c *gin.Context) {
+		session := sessions.Default(c)
+		sessionValue := session.Get("userId")
+		if sessionValue == nil {
+			c.JSON(http.StatusUnauthorized, gin.H{
+				"error": "Unauthorized",
+			})
+			c.Abort()
+			return
+		}
+		c.Set("userId", sessionValue.(string))
+
+		c.Next()
+		return
+	}
 }
